cargo-features = ["edition2024"]

[package]
name = "levenshtein-distance-game"
version = "0.0.0"
edition = "2024"
authors = ["dmyTRUEk"]

[features]
# rules:
add = []
remove = []
replace = []
swap = []
discard = []
copy = []
take = []
# default rules:
default = ["arrsdt"]
# shortcuts for rule sets:
ar = ["add", "remove"]
arr = ["add", "remove", "replace"]
arrs = ["add", "remove", "replace", "swap"]
arrsd = ["add", "remove", "replace", "swap", "discard"]
arrsdc = ["add", "remove", "replace", "swap", "discard", "copy"]
arrsdct = ["add", "remove", "replace", "swap", "discard", "copy", "take"]
arrsdt = ["add", "remove", "replace", "swap", "discard", "take"]

[profile.release]
opt-level = 3
# lto = "fat"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
#target-cpu = "native" -> RUSTFLAGS='-C target-cpu=native'

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
