# cargo-features = ["edition2024"]

[package]
name = "levenshtein-distance-game"
version = "0.0.0"
# edition = "2024"
edition = "2021"
authors = ["dmyTRUEk"]

[features]
# rules:
add = []
remove = []
replace = []
swap = []
discard = []
copy = []
take = []
# default rules:
default = [
	"arrsdt",
	"aa_by_vec",
]
# shortcuts for rule sets:
ar = ["add", "remove"]
arr = ["add", "remove", "replace"]
arrs = ["add", "remove", "replace", "swap"]
arrsd = ["add", "remove", "replace", "swap", "discard"]
arrsdc = ["add", "remove", "replace", "swap", "discard", "copy"]
arrsdct = ["add", "remove", "replace", "swap", "discard", "copy", "take"]
arrsdt = ["add", "remove", "replace", "swap", "discard", "take"]
# `all_actions` generators (mutually exclusive):
aa_by_coroutine = []
aa_by_vec = []
aa_by_gen_block = []
aa_by_vec_sorted_by_priority = []
aa_by_gen_fn = []

[profile.release]
opt-level = 3
# lto = "fat"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
#target-cpu = "native" -> RUSTFLAGS='-C target-cpu=native'

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
