[package]
name = "levenshtein-distance-game"
version = "0.13.0"
edition = "2024"
authors = ["dmyTRUEk"]

[features]
default = [
	"arrsdtc",
	"aa_by_coroutine",
]
# rules:
add = []
remove = []
replace = []
swap = []
drop = []
take = []
copy = []
# shortcuts for rule sets:
ar = ["add", "remove"]
arr = ["add", "remove", "replace"]
arrs = ["add", "remove", "replace", "swap"]
arrsd = ["add", "remove", "replace", "swap", "drop"]
arrsdt = ["add", "remove", "replace", "swap", "drop", "take"]
arrsdtc = ["add", "remove", "replace", "swap", "drop", "take", "copy"]
# `all_actions` generators (mutually exclusive):
aa_by_coroutine = []
aa_by_vec = []
aa_by_gen_block = []
aa_by_vec_sbp = [] # Sorted By Priority
aa_by_gen_fn = []

[profile.release]
opt-level = 3
# lto = "fat"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
#target-cpu = "native" -> RUSTFLAGS='-C target-cpu=native'

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
rand = "0.8.5"
